Corrected T-A with special cases and tweaks to the data files

--- a/appendix2-T-A.qmd
+++ b/appendix2-T-A.qmd
@@ -43,6 +43,32 @@ process_line <- function(line) {
   # Only increment line count for verse lines
   if (xml_name(line) == "l") {
     line_count <<- line_count + 1
+    
+    # SPECIAL CASE: Hard-code line v.445 to correct spacing
+    if (line_count == 445) {
+      return("<div style='line-height: 1.2;'>Virgine Roine je croi bien</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.531 to correct spacing
+    if (line_count == 531) {
+      return("<div style='line-height: 1.2;'>Virge Roine coronee</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.1365 to correct spacing
+    if (line_count == 1365) {
+      return("<div style='line-height: 1.2;'>Biax Peres Rois de majeste</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.1367 to correct nesting/repetition issue
+    if (line_count == 1367) {
+      return("<div style='line-height: 1.2;'><span class='decorative-initial' data-size='2'>Q</span>nt il ot sorison fenie</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.1425 to correct nesting/repetition issue
+    if (line_count == 1425) {
+      return("<div style='line-height: 1.2;'><span class='decorative-initial' data-size='2'>Q</span>nt li s’. hom vit le lion</div>")
+    }
+    
     # Add line number div every 5th line
     line_number <- if (line_count %% 5 == 0) {
       sprintf("<div class='line-number'>%d</div>", line_count)
@@ -143,6 +169,32 @@ process_line <- function(line) {
   # Only increment line count for verse lines
   if (xml_name(line) == "l") {
     line_count <<- line_count + 1
+    
+    # SPECIAL CASE: Hard-code line v.445 to correct spacing
+    if (line_count == 445) {
+      return("<div style='line-height: 1.2;'>Virgine Roine je croi bien</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.531 to correct spacing
+    if (line_count == 531) {
+      return("<div style='line-height: 1.2;'>Virge Roine coronee</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.1365 to correct spacing
+    if (line_count == 1365) {
+      return("<div style='line-height: 1.2;'>Biax Peres Rois de majeste</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.1367 to correct nesting/repetition issue
+    if (line_count == 1367) {
+      return("<div style='line-height: 1.2;'><span class='decorative-initial' data-size='2'>Q</span>uant il ot sorison fenie</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.1425 to correct nesting/repetition issue
+    if (line_count == 1425) {
+      return("<div style='line-height: 1.2;'><span class='decorative-initial' data-size='2'>Q</span>uant li sains hom vit le lion</div>")
+    }
+    
     # Add line number div every 5th line
     line_number <- if (line_count %% 5 == 0) {
       sprintf("<div class='line-number'>%d</div>", line_count)
@@ -252,6 +304,32 @@ process_line <- function(line) {
   # Only increment line count for verse lines
   if (xml_name(line) == "l") {
     line_count <<- line_count + 1
+    
+    # SPECIAL CASE: Hard-code line v.445 to correct spacing
+    if (line_count == 445) {
+      return("<div style='line-height: 1.2;'>Virgine Roine je croi bien</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.531 to correct spacing
+    if (line_count == 531) {
+      return("<div style='line-height: 1.2;'>Virge Roine coronee</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.1365 to correct spacing
+    if (line_count == 1365) {
+      return("<div style='line-height: 1.2;'>Biax Peres Rois de majeste</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.1367 to correct nesting/repetition issue
+    if (line_count == 1367) {
+      return("<div style='line-height: 1.2;'><span class='decorative-initial' data-size='2'>Q</span>uant il ot s’orison fenie</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.1425 to correct nesting/repetition issue
+    if (line_count == 1425) {
+      return("<div style='line-height: 1.2;'><span class='decorative-initial' data-size='2'>Q</span>uant li sains hom vit le lion</div>")
+    }
+    
     # Add line number div every 5th line
     line_number <- if (line_count %% 5 == 0) {
       sprintf("<div class='line-number'>%d</div>", line_count)
