--- a/appendix2-T-A.qmd
+++ b/appendix2-T-A.qmd
@@ -170,14 +170,129 @@ process_line <- function(line) {
   if (xml_name(line) == "l") {
     line_count <<- line_count + 1
     
+    # SPECIAL CASE: Hard-code line v.5 to correct apostrophe
+    if (line_count == 5) {
+      return("<div style='line-height: 1.2;'>Bien croi que volentiers lorront</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.7 to correct apostrophe
+    if (line_count == 7) {
+      return("<div style='line-height: 1.2;'>Car a chiaus qui de lui nont cure</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.144 to correct apostrophe
+    if (line_count == 144) {
+      return("<div style='line-height: 1.2;'>Ja plus tart nen faisoit -i- ris</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.174 to correct apostrophe
+    if (line_count == 174) {
+      return("<div style='line-height: 1.2;'>Naperceussies mesfaichon</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.186 to correct apostrophe
+    if (line_count == 186) {
+      return("<div style='line-height: 1.2;'>Ja se faichon nen iert escrite</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.350 to correct apostrophe
+    if (line_count == 350) {
+      return("<div style='line-height: 1.2;'>Miex vaussist qui courust li fus</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.387 to correct apostrophe
+    if (line_count == 387) {
+      return("<div style='line-height: 1.2;'>Quant vit que [] nient ert de lentree</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.410 to correct apostrophe
+    if (line_count == 410) {
+      return("<div style='line-height: 1.2;'>Chou li poise quele est vive</div>")
+    }
+    
     # SPECIAL CASE: Hard-code line v.445 to correct spacing
     if (line_count == 445) {
       return("<div style='line-height: 1.2;'>Virgine Roine je croi bien</div>")
     }
     
+    # SPECIAL CASE: Hard-code line v.518 to correct apostrophe
+    if (line_count == 518) {
+      return("<div style='line-height: 1.2;'>Conques puis ne cremirent mort</div>")
+    }
+    
     # SPECIAL CASE: Hard-code line v.531 to correct spacing
     if (line_count == 531) {
       return("<div style='line-height: 1.2;'>Virge Roine coronee</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.725 to correct apostrophe
+    if (line_count == 725) {
+      return("<div style='line-height: 1.2;'>Entriax navoit pas symonie</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.810 to correct apostrophe
+    if (line_count == 810) {
+      return("<div style='line-height: 1.2;'>Que nus quens naimme se conte</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.817 to correct apostrophe
+    if (line_count == 817) {
+      return("<div style='line-height: 1.2;'>& vit que nul nen peut trover</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.918 to correct apostrophe
+    if (line_count == 918) {
+      return("<div style='line-height: 1.2;'>Je nentent pas que soit raison</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.929 to correct apostrophe
+    if (line_count == 929) {
+      return("<div style='line-height: 1.2;'>Li vins . le sanc quen issi hors</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.982 to correct apostrophe
+    if (line_count == 982) {
+      return("<div style='line-height: 1.2;'>Si quele ni avenoit mie</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.1007 to correct apostrophe
+    if (line_count == 1007) {
+      return("<div style='line-height: 1.2;'>Ele lemprist a lever</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.1020 to correct apostrophe
+    if (line_count == 1020) {
+      return("<div style='line-height: 1.2;'>Si que ja rien nen celerai</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.1135 to correct apostrophe
+    if (line_count == 1135) {
+      return("<div style='line-height: 1.2;'>Ou quel i eust ja este</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.1158 to correct apostrophe
+    if (line_count == 1158) {
+      return("<div style='line-height: 1.2;'>Bele mere quil le feras</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.1271 to correct apostrophe
+    if (line_count == 1271) {
+      return("<div style='line-height: 1.2;'>Trente ans avoit sierent passe</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.1308 to correct apostrophe
+    if (line_count == 1308) {
+      return("<div style='line-height: 1.2;'>Fores dun drapel tot desrompu</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.1324 to correct apostrophe
+    if (line_count == 1324) {
+      return("<div style='line-height: 1.2;'>Conques se chars ne li malmist</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.1348 to correct apostrophe
+    if (line_count == 1348) {
+      return("<div style='line-height: 1.2;'>Pres iere del cors nen savoit mie</div>")
     }
     
     # SPECIAL CASE: Hard-code line v.1365 to correct spacing
@@ -190,9 +305,34 @@ process_line <- function(line) {
       return("<div style='line-height: 1.2;'><span class='decorative-initial' data-size='2'>Q</span>uant il ot sorison fenie</div>")
     }
     
+    # SPECIAL CASE: Hard-code line v.1374 to correct apostrophe
+    if (line_count == 1374) {
+      return("<div style='line-height: 1.2;'>Par un peu quil nestoit tot nus</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.1420 to correct apostrophe
+    if (line_count == 1420) {
+      return("<div style='line-height: 1.2;'>la saproisma ou li cors ert</div>")
+    }
+    
     # SPECIAL CASE: Hard-code line v.1425 to correct nesting/repetition issue
     if (line_count == 1425) {
       return("<div style='line-height: 1.2;'><span class='decorative-initial' data-size='2'>Q</span>uant li sains hom vit le lion</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.1466 to correct apostrophe
+    if (line_count == 1466) {
+      return("<div style='line-height: 1.2;'>El sarcus lont entriax -ii- mis</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.1483 to correct apostrophe
+    if (line_count == 1483) {
+      return("<div style='line-height: 1.2;'>Quant Zosimaslen vit torner</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.1515 to correct apostrophe
+    if (line_count == 1515) {
+      return("<div style='line-height: 1.2;'>Ni ot nul qui namendast se vie</div>")
     }
     
     # Add line number div every 5th line
@@ -304,6 +444,11 @@ process_line <- function(line) {
   # Only increment line count for verse lines
   if (xml_name(line) == "l") {
     line_count <<- line_count + 1
+    
+    # SPECIAL CASE: Hard-code line v.410 to correct spacing
+    if (line_count == 410) {
+      return("<div style='line-height: 1.2;'>Chou li poise qu'ele est vive</div>")
+    }
     
     # SPECIAL CASE: Hard-code line v.445 to correct spacing
     if (line_count == 445) {
