Added special cases for apostrophe issues and corrected v.559 u/v transcription in T-C

--- a/appendix2-T-C.qmd
+++ b/appendix2-T-C.qmd
@@ -146,15 +146,127 @@ process_line <- function(line) {
   # Only increment line count for verse lines
   if (xml_name(line) == "l") {
     line_count <<- line_count + 1
-    # Add line number div every 5th line
-    line_number <- if (line_count %% 5 == 0) {
-      sprintf("<div class='line-number'>%d</div>", line_count)
-    } else {
+    
+    # SPECIAL CASE: Hard-code line v.7 to correct apostrophe
+    if (line_count == 7) {
+      return("<div style='line-height: 1.2;'>bien crei volentiers lorrunt</div>")
+    }
+      
+    # SPECIAL CASE: Hard-code line v.118 to correct apostrophe
+    if (line_count == 118) {
+      return("<div style='line-height: 1.2;'>Des juvenceaus avoit lamur .</div>")
+    }
+      
+    # SPECIAL CASE: Hard-code line v.288 to correct apostrophe
+    if (line_count == 288) {
+      return("<div style='line-height: 1.2;'>Se vous men voliez mener .</div>")
+    }
+      
+    # SPECIAL CASE: Hard-code line v.309 to correct apostrophe
+    if (line_count == 309) {
+      return("<div style='line-height: 1.2;'>kunquez peust prendre respit</div>")
+    }
+      
+    # SPECIAL CASE: Hard-code line v.329 to correct apostrophe
+    if (line_count == 329) {
+      return("<div style='line-height: 1.2;'>mes de co nestot doter nulli</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.500 to correct apostrophe
+    if (line_count == 500) {
+      return("<div style='line-height: 1.2;'>Ja hom nentrast en paradis .</div>")
+    }
+      
+    # SPECIAL CASE: Hard-code line v.539 to correct apostrophe
+    if (line_count == 539) {
+      return("<div style='line-height: 1.2;'>Al chievement del ureison</div>")
+    }
       
     # SPECIAL CASE: Hard-code line v.541 to fix repetition nesting issue
     if (line_count == 541) {
       return("<div style='line-height: 1.2;'><span class='decorative-initial' data-size='1'>D</span>el ureison leva Marie</div>")
     }
+      
+    # SPECIAL CASE: Hard-code line v.556 to correct apostrophe
+    if (line_count == 556) {
+      return("<div style='line-height: 1.2;'>Conseil li quert de sapience .</div>")
+    }
+      
+    # SPECIAL CASE: Hard-code line v.620 to correct apostrophe
+    if (line_count == 620) {
+      return("<div style='line-height: 1.2;'>puis dormi treskal endemain .</div>")
+    }
+      
+    # SPECIAL CASE: Hard-code line v.646 to correct apostrophe
+    if (line_count == 646) {
+      return("<div style='line-height: 1.2;'>come co feust chief dun tison .</div>")
+    }
+      
+    # SPECIAL CASE: Hard-code line v.739 to correct apostrophe
+    if (line_count == 739) {
+      return("<div style='line-height: 1.2;'>Navoient soign dargent ne dor</div>")
+    }
+      
+    # SPECIAL CASE: Hard-code line v.835 to correct apostrophe
+    if (line_count == 835) {
+      return("<div style='line-height: 1.2;'>ki domme estoit u de femme</div>")
+    }
+      
+    # SPECIAL CASE: Hard-code line v.903 to correct apostrophe
+    if (line_count == 903) {
+      return("<div style='line-height: 1.2;'>Nest hom les seust nen eust pesance</div>")
+    }
+      
+    # SPECIAL CASE: Hard-code line v.936 to correct apostrophe
+    if (line_count == 936) {
+      return("<div style='line-height: 1.2;'>Fet Deu sur lautel miracle .</div>")
+    }
+      
+    # SPECIAL CASE: Hard-code line v.1005 to correct apostrophe
+    if (line_count == 1005) {
+      return("<div style='line-height: 1.2;'>Purquoi ten vas por une femme</div>")
+    }
+      
+    # SPECIAL CASE: Hard-code line v.1052 to correct apostrophe
+    if (line_count == 1052) {
+      return("<div style='line-height: 1.2;'>Respont Marie einz ten irras</div>")
+    }
+      
+    # SPECIAL CASE: Hard-code line v.1063 to correct apostrophe
+    if (line_count == 1063) {
+      return("<div style='line-height: 1.2;'>mes kant vient de laltre an cest tens</div>")
+    }
+      
+    # SPECIAL CASE: Hard-code line v.1126 to correct apostrophe
+    if (line_count == 1126) {
+      return("<div style='line-height: 1.2;'>Quankil out oi de Marie .</div>")
+    }
+      
+    # SPECIAL CASE: Hard-code line v.1143 to correct apostrophe
+    if (line_count == 1143) {
+      return("<div style='line-height: 1.2;'>Crient de la rien quil plus coveite</div>")
+    }
+      
+    # SPECIAL CASE: Hard-code line v.1214 to correct apostrophe
+    if (line_count == 1214) {
+      return("<div style='line-height: 1.2;'>Ja hom navera saint parais .</div>")
+    }
+      
+    # SPECIAL CASE: Hard-code line v.1338 to correct apostrophe
+    if (line_count == 1338) {
+      return("<div style='line-height: 1.2;'>kunc sa char rien ne blemist .</div>")
+    }
+      
+    # SPECIAL CASE: Hard-code line v.1491 to correct apostrophe
+    if (line_count == 1491) {
+      return("<div style='line-height: 1.2;'>mes quant il vint a lenterrer</div>")
+    }
+    
+    # Add line number div every 5th line
+    line_number <- if (line_count %% 5 == 0) {
+      sprintf("<div class='line-number'>%d</div>", line_count)
+    } else {
+      
       ""
     }
   } else {
