Added special cases to correct T-F2 (vv. 22, 31, 18, 19, & 20) and modified v.34 to correct i/j transcription

--- a/appendix2-T-F2.qmd
+++ b/appendix2-T-F2.qmd
@@ -127,6 +127,17 @@ process_line <- function(line) {
   # Only increment line count for verse lines
   if (xml_name(line) == "l") {
     line_count <<- line_count + 1
+    
+    # SPECIAL CASE: Hard-code line v.22 to correct apostrophe
+    if (line_count == 22) {
+      return("<div style='line-height: 1.2;'>sen commenca aleir sun pas</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.31 to correct apostrophe
+    if (line_count == 31) {
+      return("<div style='line-height: 1.2;'>baee fui en menfance</div>")
+    }
+    
     # Add line number div every 5th line
     line_number <- if (line_count %% 5 == 0) {
       sprintf("<div class='line-number'>%d</div>", line_count)
@@ -218,6 +229,22 @@ process_line <- function(line) {
   # Only increment line count for verse lines
   if (xml_name(line) == "l") {
     line_count <<- line_count + 1
+    
+    # SPECIAL CASE: Hard-code line v.18 to correct brackets
+    if (line_count == 18) {
+      return("<div style='line-height: 1.2;'>[Nos] tre sires l’aveit si chere</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.19 to correct brackets
+    if (line_count == 19) {
+      return("<div style='line-height: 1.2;'>[Q] ue plus que dos piez e demie</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.20 to correct brackets
+    if (line_count == 20) {
+      return("<div style='line-height: 1.2;'>[A] veit entre la tere e le</div>")
+    }
+    
     # Add line number div every 5th line
     line_number <- if (line_count %% 5 == 0) {
       sprintf("<div class='line-number'>%d</div>", line_count)
