Added special cases to fix apostrophes in T-F1

--- a/appendix2-T-F1.qmd
+++ b/appendix2-T-F1.qmd
@@ -215,15 +215,61 @@ process_line <- function(line) {
   # Only increment line count for verse lines
   if (xml_name(line) == "l") {
     line_count <<- line_count + 1
-    # Add line number div every 5th line
-    line_number <- if (line_count %% 5 == 0) {
-      sprintf("<div class='line-number'>%d</div>", line_count)
-    } else {
       
+    # SPECIAL CASE: Hard-code line v.10 to correct apostrophe
+    if (line_count == 10) {
+      return("<div style='line-height: 1.2;'>e por samor mei escoter .</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.36 to correct apostrophe
+    if (line_count == 36) {
+      return("<div style='line-height: 1.2;'>Qui tuz jurz dort & nent se veille .</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.38 to correct apostrophe
+    if (line_count == 38) {
+      return("<div style='line-height: 1.2;'>Desquil sent al quer la mort .</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.65 to correct apostrophe
+    if (line_count == 65) {
+      return("<div style='line-height: 1.2;'>Por co quele esteit bele & gente .</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.67 to correct apostrophe
+    if (line_count == 67) {
+      return("<div style='line-height: 1.2;'>Quele fe seit tot sun pleisir .</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.99 to correct apostrophe
+    if (line_count == 99) {
+      return("<div style='line-height: 1.2;'>Desquele out passe duze anz .</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.128 to correct apostrophe
+    if (line_count == 128) {
+      return("<div style='line-height: 1.2;'>e rent si espris de samor .</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.131 to correct apostrophe
+    if (line_count == 131) {
+      return("<div style='line-height: 1.2;'>por co quil erent si ami .</div>")
+    }
+    
     # SPECIAL CASE: Hard-code line v.134 to fix nesting tags issue
     if (line_count == 134) {
       return("<div style='line-height: 1.2;'>sentredonouent dono vent grant colees .</div>")
     }
+    
+    # SPECIAL CASE: Hard-code line v.156 to correct apostrophe
+    if (line_count == 156) {
+      return("<div style='line-height: 1.2;'>Si cum est en lescripture .</div>")
+    }
+    
+    # Add line number div every 5th line
+    line_number <- if (line_count %% 5 == 0) {
+      sprintf("<div class='line-number'>%d</div>", line_count)
+    } else {
       ""
     }
   } else {
